tests/bad/large-int.tig
561465146554545454554545646541581454186518654541885428856451287548754879456287546128542185462865421